extras/ingress/nginx-ingress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-svc
  labels:
    app: nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  externalIPs:
  - 172.16.99.254
  selector:
    app: nginx-ingress
